<resources>
    <string name="app_name">SINCROapp</string>
    <string name="server_url">https://192.168.1.7:8443</string>
    <string name="email_label">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cc_number_label">Citizen Card Number</string>
    <string name="register_title">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cc_number_input_fragment_summary_text">Insert your Citizen Card Number so you can continue the registration process</string>
    <string name="submit_button">Submit</string>
    <string name="information_review_fragment_label_cc_number">Citizen Card Number:</string>
    <string name="content">content</string>
    <string name="information_review_fragment_label_email">Email</string>
    <string name="sent_email_text">We have sent you an email with a verification code, insert it below to verify your identity</string>
    <string name="verification_code_input">Verification Code</string>
    <string name="username_input">Username</string>
    <string name="password_input">Password</string>
    <string name="full_name_label">Full Name</string>
    <string name="driver_licence_number_label">Driver Licence Number</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="new_user_info_label">Create a new username and password to complete your registration</string>
    <string name="network_error">A network error occurred</string>
    <string name="wrong_cc_number_input">Please input a 9 digit number</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pending_infractions_title">Pending Infractions</string>
    <string name="past_infractions_title">History</string>
</resources>